# ha-openai-realtime

./: AGENTS.md  README.md  justfile  repository.json
.github/workflows/: build-addon.yml
home-assistant-voice-pe/: README.md  secrets.yaml.example  voice_pe_base.yaml  voice_pe_components_git.yaml  voice_pe_components_local.yaml  voice_pe_config.yaml  voice_pe_example.yaml  voice_pe_upstream.yaml
home-assistant-voice-pe/esphome/components/voice_assistant_websocket/: __init__.py  voice_assistant_websocket.cpp  voice_assistant_websocket.h
openai_realtime_voice_agent/: Dockerfile  README.md  config.yaml  pyproject.toml  requirements-frozen.txt
openai_realtime_voice_agent/app/: main.py  mcp_service.py  raw_audio_serializer.py  realtime_session_router.py  session_manager.py  websocket_handler.py
openai_realtime_voice_agent/tests/: test_pipeline_contract.py  test_raw_audio_serializer_contract.py
plans/: AUDIO_PREROLL.md  MULTI_SATELLITE.md
